--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,37 @@
-<div class="hero">
-  <div class="hero-wrapper">
-    <div class="logo-title">zkNFT</div>
-    <div class="powered-tagline">powered by &nbsp; <img class="zksync-logo" src="../assets/zksync-logo.svg"></div>
-  </div>
-</div>
+<div class="home">
 
-<div class="container">
-  <div class="sub-title">NFTs for everyone</div>
-  <div class="desc">zkSync's zkRollup allows anyone to permissionlessly mint, transfer, and swap NFTs at a fraction of mainnet costs. </div>
+  <div class="two-columns hero">
+    <div class="tagline">
+      <div>NFTs for everyone.</div>
+      <div class="smaller-tagline">Mint, explore, and swap NFTs for a fraction of Ethereum mainnet costs. zkSync's zkRollup makes transactions fast, cheap, and secure.</div>
+      <div class="get-started-holder"><button class="get-started" routerLink="/mint">Get Started</button></div>
+    </div>
+    <div>
+      <img src="../assets/main.svg" class="main-img">
+    </div>
+  </div>
+
+  <div class="tri-cols">
+    <div class="mint card">
+      <div>
+        <img src="../assets/mint.svg" class="icon">
+      </div>
+      <div class="card-title">Mint</div>
+      <div class="card-text">Mint NFTs on zkSync for as low as 0.00002 ETH! Your NFT metadata is automatically uploaded to IPFS behind the scenes.</div>
+    </div>
+    <div class="view card">
+      <div>
+        <img src="../assets/explore.svg" class="icon">
+      </div>
+      <div class="card-title">Explore</div>
+      <div class="card-text">Explore existing NFTs and your own collection! Compatible with any NFT on zkSync that uses IPFS content hashes.</div>
+    </div>
+    <div class="swap card">
+      <div>
+        <img src="../assets/swap.svg" class="icon">
+      </div>
+      <div class="card-title">Swap</div>
+      <div class="card-text">Make offers and swap between NFTs, ETH, or any other ERC20 token! No swap fees, and incredibly low transaction fees.</div>
+    </div>
+  </div>
 </div>
