--- a/src/app/mint/mint.component.html
+++ b/src/app/mint/mint.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+
+
+  <div class="header">
+    <div>Mint NFT</div>
+    <div>
+      <img src="../assets/mint.svg" class="header-img">
+    </div>
+  </div>
+
   <div class="title">Mint NFT</div>
 
   <div class="instructions">This will mint an NFT directly onto zkSync's L2. Fill in your NFT's information, and then click the Mint NFT button. It will then prompt you to sign a message with your wallet, and then mint your NFT.</div>
