--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
 <div class="footer">
   <div class="powered-tagline">powered by &nbsp; <a href="https://zksync.io" target="_blank"><img class="zksync-logo" src="../assets/zksync-logo.svg"></a></div>
+  <div><a href="{{zkscan}}" target="_blank">zkScan</a></div>
+  <div><a href="{{zkwallet}}" target="_blank">zkWallet</a></div>
 </div>
