--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,10 +3,18 @@
   flex-wrap: wrap;
   max-width: 90%;
   margin: auto;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  align-items: center;
+}
+
+.footer > div {
+  padding: 1rem 1rem;
+  font-weight: bolder;
+  text-decoration: none;
 }
 
 .powered-tagline {
-  margin-top: 2rem;
   color: var(--light-gray);
   display: flex;
   align-items: center;
